[gd_scene load_steps=8 format=3 uid="uid://c44uocpx5haec"]

[ext_resource type="Script" path="res://Scripts/settingsMenu.gd" id="1_njvug"]
[ext_resource type="FontFile" uid="uid://crmpbal4ch8up" path="res://Scenes/Global/ACDiaryGirlUnicode.otf" id="2_t7p6j"]
[ext_resource type="Texture2D" uid="uid://yykqaxqck474" path="res://Scenes/Global/checkedBoxIcon.png" id="3_e71kw"]
[ext_resource type="Texture2D" uid="uid://dfnxoxevwbcmi" path="res://Scenes/Global/uncheckedBoxIcon.png" id="4_dufnw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ing5f"]
bg_color = Color(0.419608, 0.0745098, 0.0705882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2gwbm"]
bg_color = Color(0.419608, 0.0745098, 0.0705882, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ienpq"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_njvug")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ing5f")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -519.0
offset_top = -149.0
offset_right = 519.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2gwbm")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 20

[node name="Control" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 30

[node name="FullScreen" type="HBoxContainer" parent="PanelContainer/MarginContainer/Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 205
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Control/VBoxContainer/FullScreen"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t7p6j")
theme_override_font_sizes/font_size = 35
text = "Schermo intero"

[node name="CheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/Control/VBoxContainer/FullScreen"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_icons/checked = ExtResource("3_e71kw")
theme_override_icons/unchecked = ExtResource("4_dufnw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ienpq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ienpq")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ienpq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ienpq")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ienpq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ienpq")

[node name="Res" type="HBoxContainer" parent="PanelContainer/MarginContainer/Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 265
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Control/VBoxContainer/Res"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t7p6j")
theme_override_font_sizes/font_size = 35
text = "Risoluzione
"

[node name="OptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/Control/VBoxContainer/Res"]
layout_mode = 2
item_count = 1
popup/item_0/text = ""
popup/item_0/id = 0

[node name="Brightness" type="HBoxContainer" parent="PanelContainer/MarginContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Control/VBoxContainer/Brightness"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t7p6j")
theme_override_font_sizes/font_size = 35
text = "Luminosit√†"

[node name="BrightnessSlider" type="HSlider" parent="PanelContainer/MarginContainer/Control/VBoxContainer/Brightness"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.5
max_value = 1.5
step = 0.1
value = 1.0

[node name="Volume" type="HBoxContainer" parent="PanelContainer/MarginContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Control/VBoxContainer/Volume"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t7p6j")
theme_override_font_sizes/font_size = 35
text = "Volume     "

[node name="VolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/Control/VBoxContainer/Volume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
step = 5.0
value = 20.0

[node name="PercentageContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Control"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 30

[node name="Null" type="Label" parent="PanelContainer/MarginContainer/Control/PercentageContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t7p6j")
theme_override_font_sizes/font_size = 35
text = "          "

[node name="Nil" type="Label" parent="PanelContainer/MarginContainer/Control/PercentageContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t7p6j")
theme_override_font_sizes/font_size = 35

[node name="BrightnessPercentage" type="Label" parent="PanelContainer/MarginContainer/Control/PercentageContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t7p6j")
theme_override_font_sizes/font_size = 35

[node name="VolumePercentage" type="Label" parent="PanelContainer/MarginContainer/Control/PercentageContainer"]
layout_mode = 2
size_flags_horizontal = 5
theme_override_fonts/font = ExtResource("2_t7p6j")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_ienpq")
